--- a/src/components/transfer/transfer.css
+++ b/src/components/transfer/transfer.css
@@ -1,31 +1,16 @@
-
-label {
-    margin-top: 20px;
+.transfer {
+    margin:0;
 }
-
-.contact-edit input {
-    float: right;
-}
-
-.contact-edit .title {
-    width: 120px;
-    text-align: left;
-}
-
-.contact-edit button {
+.transfer button {
     box-shadow: 0 -3px #fff, 0 -6px #000, 3px 0 #fff, 3px -3px #000, 6px 0 #000, 0 3px #fff, 0 6px #000, -3px 0 #fff, -3px 3px #000, -6px 0 #000, -3px -3px #000, 3px 3px #000, 3px 9px #aaa, 6px 6px #aaa, 9px 3px #aaa;
     margin-left: 20px;
+    margin-top: 20px;
     padding: 10px;
     font-family: mainFont;
     text-align: center;
 }
 
-.contact-edit button:hover {
+.transfer button:hover {
     background-color: grey;
     color: #ffffff;
-}
-
-.contact-edit .btn-panel {
-    margin-top: 30px;
-    width: 100%;
 }
