--- a/src/components/transfer/transfer.css
+++ b/src/components/transfer/transfer.css
@@ -1,5 +1,5 @@
 .transfer {
-    margin:0;
+    margin: 0 auto;
 }
 .transfer button {
     box-shadow: 0 -3px #fff, 0 -6px #000, 3px 0 #fff, 3px -3px #000, 6px 0 #000, 0 3px #fff, 0 6px #000, -3px 0 #fff, -3px 3px #000, -6px 0 #000, -3px -3px #000, 3px 3px #000, 3px 9px #aaa, 6px 6px #aaa, 9px 3px #aaa;
