--- a/src/components/contactList/contactList.css
+++ b/src/components/contactList/contactList.css
@@ -13,6 +13,9 @@
     align-items: start;
 }
 
+.contact-list ul{
+    width: 100%;
+}
 .contact-list li {
     margin-top: 25px;
     padding: 10px;
@@ -22,4 +25,10 @@
 .contact-list li:hover {
     padding: 10px;
     box-shadow: 0 -3px #fff, 0 -6px #000, 3px 0 #fff, 3px -3px #000, 6px 0 #000, 0 3px #fff, 0 6px #000, -3px 0 #fff, -3px 3px #000, -6px 0 #000, -3px -3px #000, 3px 3px #000, 3px 9px #aaa, 6px 6px #aaa, 9px 3px #aaa;
+}
+
+@media (min-width: 750px){
+    .contact-list ul{
+        width: initial;
+    }
 }
