--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,9 @@ body {
 
 input {
     font-family: mainFont;
-    padding: 0px 0px 10px 10px;
+    padding: 10px 0px 10px 10px;
     box-shadow: 0 -3px #fff, 0 -6px #000, 3px 0 #fff, 3px -3px #000, 6px 0 #000, 0 3px #fff, 0 6px #000, -3px 0 #fff, -3px 3px #000, -6px 0 #000, -3px -3px #000, 3px 3px #000, 3px 9px #aaa, 6px 6px #aaa, 9px 3px #aaa;
-    font-size: 30px;
-    padding-top: 10px;
+    font-size: 1em;
 }
 
 input:focus {
@@ -24,7 +23,7 @@ input:focus {
 
 ::-webkit-input-placeholder { 
   font-family: mainFont;
-  padding: 10px 0px 10px 0px;
+  padding: 10px 0px 10px 10px;
 }
 
 ul{
@@ -38,12 +37,7 @@ ul{
 }
 
 .container {
-  margin: auto 50px;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  margin: auto 20px;
 }
 
 a:visited {
@@ -77,4 +71,16 @@ a {
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+@media (min-width: 750px){
+  .container {
+    margin: auto 50px;
+  }
+ 
+  input {
+    font-size: 30px;
+    /* padding: 10px 0px 10px 10px; */
+  }
+
 }
