--- a/src/components/contactDetail/contactDetail.css
+++ b/src/components/contactDetail/contactDetail.css
@@ -1,10 +1,11 @@
 .contact-detail img{
-    width: 150px;
-    height: 150px;
+    width: 100%;
+    height: 100%;
 }
 
 .contact-detail {
     display: flex;
+    flex-direction: column;
     align-items: flex-start;
     box-shadow: 0 -3px #fff, 0 -6px #000, 3px 0 #fff, 3px -3px #000, 6px 0 #000, 0 3px #fff, 0 6px #000, -3px 0 #fff, -3px 3px #000, -6px 0 #000, -3px -3px #000, 3px 3px #000, 3px 9px #aaa, 6px 6px #aaa, 9px 3px #aaa;
 }
@@ -15,7 +16,25 @@
 }
 
 .contact-detail section div {
-    font-size: 25px;
+    font-size: 0.7em;
     padding: 10px;
     margin: 0;
+}
+
+@media (min-width: 750px){
+    .contact-detail {
+        display: flex;
+        align-items: flex-start;
+        flex-direction: row;
+        
+    }
+
+    .contact-detail img{
+        width: 150px;
+        height: 150px;
+    }
+
+    .contact-detail section div {
+        font-size: 1.5em;
+    }
 }
