--- a/src/components/contactPreview/contactPreview.css
+++ b/src/components/contactPreview/contactPreview.css
@@ -18,8 +18,15 @@
     display: flex;
     flex-direction: column;
     align-items: start;
+    font-size: 15px;
 }
 
 .contact-info div {
     padding: 10px;
+}
+
+@media (min-width: 750px){
+    .contact-preview .contact-info {
+        font-size: 25px;;
+    }
 }
