--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -10,13 +10,14 @@
   .App-header h1 {
     font-size: 40px;
     width: 80%;
+    display: none;
   } 
   
   
   .App-header img.logo {
     position: relative;
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
     float: left;
   }
 
@@ -24,6 +25,7 @@
     display: flex;
     align-items: center;
     font-size:10px;
+    margin-left: 30px;
   }
 
   .nav-bar a {
@@ -45,5 +47,15 @@
    /* object-fit: cover; */
  }
 
+ @media (min-width: 750px){
+  .App-header h1 {
+      display: block;
+  }
+
+  .App-header img.logo {
+    height: 100px;
+    width: 100px;
+  }
+}
 
   
