--- a/src/components/movePreview/movePreview.css
+++ b/src/components/movePreview/movePreview.css
@@ -1,11 +1,17 @@
 .move-preview {
     box-shadow: 0 -3px #fff, 0 -6px #000, 3px 0 #fff, 3px -3px #000, 6px 0 #000, 0 3px #fff, 0 6px #000, -3px 0 #fff, -3px 3px #000, -6px 0 #000, -3px -3px #000, 3px 3px #000, 3px 9px #aaa, 6px 6px #aaa, 9px 3px #aaa;
     padding: 20px;
-    width: 400px;
+    width: 80vw;
     margin-top: 20px; 
     margin-right: 20px;
 }
 
 .move-preview div {
     padding: 10px;
+}
+
+@media (min-width: 750px){
+    .move-preview {
+        width: 400px;
+    }
 }
