--- a/src/pages/contactEdit/contactEdit.css
+++ b/src/pages/contactEdit/contactEdit.css
@@ -1,15 +1,24 @@
 
+
 label {
     margin-top: 20px;
 }
 
 .contact-edit input {
     float: right;
+    width: 85vw;
 }
 
 .contact-edit .title {
     width: 120px;
     text-align: left;
+    display: none;
+    
+}
+
+.contact-edit h1 {
+    text-align: left;
+    font-size: 1.2em;
 }
 
 .contact-edit button {
@@ -28,4 +37,19 @@ label {
 .contact-edit .btn-panel {
     margin-top: 30px;
     width: 100%;
+}
+
+@media (min-width: 750px){
+    .contact-edit .title {
+        display: block; 
+    }
+
+    .contact-edit input {
+        float: right;
+        width: 100%;
+    }
+    .contact-edit h1 {
+        text-align: left;
+        font-size: 1.5em;
+    }
 }
