--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -25,7 +25,7 @@
     display: flex;
     align-items: center;
     font-size:10px;
-    margin-left: 30px;
+    /* margin-left: 30px; */
   }
 
   .nav-bar a {
